--- a/4/styles/styles.css
+++ b/4/styles/styles.css
@@ -17,7 +17,7 @@
 }
 
 html {
-    min-height: 100%;
+    height: 100%;
 }
 
 .wrapper {
@@ -45,14 +45,28 @@ body {
 
 }
 
+.main-header {
+    display: flex;
+    background: #ffffff;
+    color: #000000;
+    height: 64px;
+
+
+}
 .main-index {
     display: block;
     flex-grow: 1;
     background-image: url("../images/vector-files/Vector-first-page.svg");
 }
 
+.logo {
+    width: 140px;
+    height: 0 70px;
+    padding-left: 70px;
+}
+
 .navigation-link {
-    font-family: "PT Sans" sans-serif;
+    font-family: "PT Sans", sans-serif;
     font-weight: 700;
     text-decoration: none;
     text-align: center;
@@ -60,30 +74,36 @@ body {
     text-transform: uppercase;
 }
 
+.navigation-menu-list {
+    margin-left: 30px;
+
+}
+
 .navigation-list {
     display: flex;
-    align-items: stretch;
     justify-content: space-between;
+    margin-right: auto;
+    width: 100%;
+    list-style-type: none;
+
 }
 
 .navigation-user {
     display: flex;
-}
+    justify-content: space-between;
+    margin-left: auto;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-style: normal;
+    text-align: center;
+    list-style-type: none;
 
-
-.main-header {
-    display: flex;
-    background: #ffffff;
-    color: #000000
-}
-
-.visually-hidden {
-    display: none;
 }
 
 .welcome {
     background-image: url("../images/photos/index-background-min.jpg");
-
     background-color: #333333;
     background-size: 100% auto;
     background-repeat: no-repeat;
@@ -92,54 +112,124 @@ body {
 }
 
 .welcome-sedona {
-    padding: 51px, 371px, 82px;
+    display: block;
+    width: 458px;
+    height: 352px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.description {
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-.advantages {
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
 }
-
-.advantages-title {
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 700;
-    text-transform: uppercase;
+.small-town {
+    font-family: "PT Sans", sans-serif;
+    font-size: 30px;
     font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: uppercase;
     text-align: center;
+    width: 620px;
+    height: 72px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 69px;
+
 }
 
-.navigation-user {
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 700;
-    text-transform: uppercase;
+
+.better {
+    font-family: "PT Sans", sans-serif;
+    font-size: 22px;
     font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
     text-align: center;
+    margin-bottom: 69px;
 
 }
 
 .description {
-    display: flex;
     text-align: center;
     color: #000000;
-    font-family: "PT sans";
+    font-family: "PT sans", sans-serif;
     font-size: 30px;
     font-weight: 700;
     line-height: 36px;
     text-transform: uppercase;
-    background-color: #82b3d3;
+    width: 1200px;
+    height: 261px;
+
+}
+
+.reasons {
+    width: 230px;
+    height: 131px;
+    padding: 103px 85px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    flex-direction: column;
+}
+
+.advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+}
+
+.advantages-title {
+    width: 175px;
+    height: 56px;
+
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-style: normal;
+    text-align: center;
+}
+
+.come-to-sedona {
+    font-family: "PT sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 30px;
+    width: 505px;
+    height: 72px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.advantages-item {
+    display: flex;
+    align-self: stretch;
+    width: 400px;
+    height: 385px;
+}
+
+.sedona-pic {
+    display: flex;
+    align-self: stretch;
+    width: 800px;
+    margin: auto;
 }
 
 .blue {
     background-color: #82b3d3;
     color: #ffffff;
+}
+
+h3 {
+    font-size: 24px;
 }
 
 .light-blue {
@@ -151,7 +241,6 @@ body {
 }
 
 .rest {
-    display: flex;
     text-align: center;
     font-size: 18px;
     font-weight: 400;
@@ -192,16 +281,19 @@ body {
     background-color:  rgba(131, 179, 211, 0.12);
 }
 
-.hotel-serch {
-    display: flex;
-    text-align: center;
-}
-
 .services {
     display: flex;
     text-align: center;
     font-size: 18px;
 
+}
+
+.services-list {
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    list-style: none;
+    padding: 0;
 }
 
 h3 {
@@ -212,27 +304,100 @@ h3 {
     font-size: 18px;
 }
 
+.hotel-serch {
+    display: block;
+    text-align: center;
+    width: 1200px;
+    height: 406px;
+}
+
+.interest-title {
+    font-family: "PT sans", sans-serif;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 120% */
+    text-transform: uppercase
+}
+
+.reserch {
+    padding: 96px 304px;
+}
+
+.interest-title {
+    font-family: "PT sans", sans-serif;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 36px; /* 120% */
+    text-transform: uppercase;
+    text-align: center;
+    display: block;
+
+}
+
+.reserch-description {
+    font-family: "PT sans", sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px; /* 118.182% */
+    text-align: center;
+    width: 592px;
+    height: 52px;
+
+}
+
 .subscribe {
+    background-image: url("../images/photos/Subscribe.jpg");
+    width: 1200px;
+    height: 415px;
+   /* padding: 96px 258px 104px 258px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    gap: 10px;
     display: flex;
+    background-repeat: no-repeat;
+
+
+}
+
+.get-information {
+    font-family: "PT sans", sans-serif;
+    color: #ffffff;
+    gap: 54px;
+    width: 684px;
+    height: 215;
+    margin: 96px 258px 104px 258px;
+
+}
+
+.get-letters {
+    font-size: 30px;
+    width: 404px;
+    height: 36px;
+}
+
+.useful {
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    font-size: 22px;
 }
 
 .main-footer {
-    font-family: "PT Sans", sans-serif;
     display: flex;
+    justify-content: space-between;
+    margin: 70px 30px;
+    width: 1200px;
+    height: 120px;
 
 }
 
-.footer-sosial {
-    display: flex;
-}
+.footer-sosial-list {
+    list-style-type: none;
 
-.contacts {
-    display: flex;
 }
-
-.footer-logo {
-    display: flex;
-}
-
 /*Каталог*/
 /*мозг отказал, ничего не понимаю, нужна помощь в разборе стилей*/
