--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,3 @@
-/*проблемы со стилизацией. ничего не понимаю. совсем.*/
-
 @font-face {
     font-family: "PT Sans";
     font-style: normal;
@@ -21,13 +19,15 @@ html {
 }
 
 .wrapper {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     flex-grow: 1;
     margin: 0 auto;
+    padding: 0 40p;
     background-color: #ffffff;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
     width: 1200px;
+
 }
 
 body {
@@ -50,6 +50,10 @@ body {
     background: #ffffff;
     color: #000000;
     height: 64px;
+    padding: 0 70px;
+    align-items: flex-start;
+    flex-shrink: 0;
+    justify-content: space-between;
 
 
 }
@@ -57,11 +61,12 @@ body {
     display: block;
     flex-grow: 1;
     background-image: url("../images/vector-files/Vector-first-page.svg");
+
 }
 
 .logo {
     width: 140px;
-    height: 0 70px;
+    height: 70px;
     padding-left: 70px;
 }
 
@@ -108,15 +113,26 @@ body {
     background-size: 100% auto;
     background-repeat: no-repeat;
     background-position: center;
+    width: 1200px;
+    height: 485px;
 
 }
 
 .welcome-sedona {
-    display: block;
+
     width: 458px;
     height: 352px;
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 51px;
+    padding-bottom: 82px;
+}
+
+.bottom-vector {
+    display: block;
+padding-bottom: 0;
+
 }
 
 .description {
@@ -132,7 +148,6 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: 36px;
-    text-transform: uppercase;
     text-align: center;
     width: 620px;
     height: 72px;
@@ -161,7 +176,6 @@ body {
     font-size: 30px;
     font-weight: 700;
     line-height: 36px;
-    text-transform: uppercase;
     width: 1200px;
     height: 261px;
 
@@ -181,18 +195,31 @@ body {
     display: flex;
     flex-wrap: wrap;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 .advantages-title {
-    width: 175px;
-    height: 56px;
-
     font-size: 20px;
     line-height: 24px;
     font-weight: 700;
     text-transform: uppercase;
     font-style: normal;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 62px;
+}
+
+.advantages-description {
+    font-size: 18px;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.advantages-item-accent .advantages-item {
+    padding-top: 102px;
+    padding-bottom: 102px;
 }
 
 .come-to-sedona {
@@ -210,17 +237,21 @@ body {
 }
 
 .advantages-item {
-    display: flex;
-    align-self: stretch;
     width: 400px;
-    height: 385px;
+    min-height: 385px;
+    padding: 112px 85px;
+    box-sizing: border-box;
+}
+
+.advantages-item-accent {
+    display: flex;
+
 }
 
 .sedona-pic {
-    display: flex;
-    align-self: stretch;
     width: 800px;
-    margin: auto;
+    height: 385px;
+
 }
 
 .blue {
@@ -253,6 +284,19 @@ h3 {
     height: 72px;
 
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 
 .residence {
     background-color:  rgba(131, 179, 211, 0.20);
@@ -388,16 +432,197 @@ h3 {
 
 .main-footer {
     display: flex;
-    justify-content: space-between;
-    margin: 70px 30px;
-    width: 1200px;
-    height: 120px;
+    justify-content: center;
+    padding: 40px 70px 30px 70px;
+    align-items: center;
 
 }
 
+.footer-sosial-item {
+    display: flex;
+}
+
 .footer-sosial-list {
+    display: flex;
     list-style-type: none;
+
+}
+
+.footer-general {
+    display: flex;
+    width: 1060px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
 
 }
 /*Каталог*/
 /*мозг отказал, ничего не понимаю, нужна помощь в разборе стилей*/
+
+.page-container {
+
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  margin: 0 auto;
+  padding: 0 40p;
+  background-color: #ffffff;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  width: 1200px;
+}
+
+.main-header-catalog {
+  display: flex;
+  background: #ffffff;
+  color: #000000;
+  height: 64px;
+  padding: 0 70px;
+  align-items: flex-start;
+  flex-shrink: 0;
+  justify-content: space-between;
+
+}
+
+.inner-catalog {
+  display: flex;
+  flex-direction: column;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #080101;
+  background-color: #476b86;
+  min-height: 412px;
+  background-image: url("../images/photos/filter-background24.jpg");
+}
+
+.catalog-title {
+  margin: 0;
+  padding-top: 35px;
+  padding-bottom: 8px;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 78px;
+  color: #ffffff;
+}
+
+.catalog-filter-list {
+  list-style-type: none;
+}
+
+.catalog-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 40px;
+  align-self: stretch;
+  padding: 35px 70px 70px 70px;
+}
+
+.main-filter-1 {
+  width: 1060px;
+}
+
+.results-wrapper {
+  padding: 50px 70px 60px 70px;;
+}
+
+.sort {
+  width: 1060px;
+  width: auto 49px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+.hotel-results {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 40px;
+}
+
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(3, 340px);
+  margin: 0;
+  padding: 0;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.product-card {
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  gap: 17px;
+  padding: 20px;
+  border-radius: 4px;
+  outline: 1px solid #e6e6e6;
+}
+
+.product-card-item {
+  margin: 0;
+  font-family: PT Sans;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  color: inherit;
+}
+
+
+
+.pagination-wrapper {
+  width: 1060px;
+  height: 60px;
+  padding-top: 40px;
+}
+
+.pagination {
+  display: flex;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
+
+}
+
+.pagination-link {
+  box-sizing: border-box;
+  width: 60px;
+  height: 60px;
+  display: block;
+  padding: 14px 20px;
+  font-family: "PT Sans" sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  text-transform: uppercase;
+}
+
+.pagination-current {
+  color: #000000;
+  background-color: #f2f2f2;
+}
+
+.pagination-item {
+  list-style-type: none
+}
+
+.pagination-others {
+  background-color: #83b3d3;
+}
+
+.pagination-hidden {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+
+.subscribe-catalog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 96px 258px 104px 258px;
+
+
+}
