--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,10 +31,10 @@ html {
 }
 
 body {
+  font-family: "PT Sans", sans-serif;
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  font-family: "PT Sans", sans-serif;
   font-size: 22px;
   line-height: 21px;
   font-weight: 400;
@@ -49,27 +49,23 @@ body {
   display: flex;
   background: #ffffff;
   color: #000000;
-  min-height: 64px;
+  height: 64px;
   padding: 0 70px;
-  justify-content: space-between;
 
 }
 
 .logo {
   width: 140px;
-  min-height: 70px;
+  height: 70px;
   position: relative;
+  z-index: 1;
 
 }
 
-/*
-.serch {
-  display: flex;
-padding: 22px 12px;
-justify-content: center;
-align-items: center;
+.navigation-menu-list {
+  margin-left: 28px;
+  margin-right: auto;
 }
-*/
 
 .navigation-link {
   font-family: "PT Sans", sans-serif;
@@ -78,71 +74,66 @@ align-items: center;
   text-align: center;
   color: inherit;
   text-transform: uppercase;
-  padding: 20px;
   display: block;
   cursor: pointer;
-  padding: 22px 12px;
+  padding: 20px 16px;
+  min-width: 20px;
+  min-height: 20px;
 }
 
 /*
-.navigation-item-user {
-  display: flex;
-  padding: 22px 12px;
-  justify-content: center;
-  align-items: center;
+.navigation-serch {
+  background-image: url(../images/vector-files/serch.svg);
+  background-repeat: no-repeat;
+background-position: center;
+}
+
+.navigation-favorite {
+  background-image: url(../images/vector-files/heart.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 */
+
+.count {
+  font-family: "PT Sans", sans-serif;
+  border-radius: 50%;
+  background-color: #7db54f;
+  color: #ffffff;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 10px;
+  padding: 4px 4px;
+  position: absolute;
+  top: 15px;
+
+}
 
 .navigation-list {
   display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  padding: 0;
-  margin: 0 auto 0;
-  align-items: center;
-  margin-left: 30px;
-  font-size: 20px;
-
-}
-
-.serch {
-  width: 18px;
-  height: 18px;
-
-}
-
-/*
-.navigation-user-list {
-  display: flex;
-  justify-content: space-between;
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-style: normal;
-  text-align: center;
   list-style-type: none;
   padding: 0;
   margin: 0;
+  align-items: center;
+  font-size: 20px;
 
 }
-*/
 
 .button-want-here {
   width: 160px;
-  padding: 8px 50px;
+  padding: 8px 16px;
   justify-content: center;
   align-items: center;
   gap: 10px;
   border-radius: 4px;
   background: #756157;
   color: #ffffff;
+  box-sizing: border-box;
 }
 
 .main-index {
   display: block;
   flex-grow: 1;
-  background-image: url("../images/vector-files/Vector-first-page.svg");
 
 }
 
@@ -286,9 +277,6 @@ align-items: center;
   color: #ffffff;
 }
 
-h3 {
-  font-size: 24px;
-}
 
 .light-blue {
   background-color: rgba(131, 179, 211, 0.20);
@@ -437,12 +425,13 @@ h3 {
 /*подписаться на рассылку*/
 
 .subscribe {
-  background-image: url("../images/photos/Subscribe.jpg");
-  /*padding: 96px 258px 104px 258px;*/
+  background-image: url("../images/photos/subscribe.jpg");
+  background-repeat: no-repeat;
+  margin: 0;
 
-  width: 1200px;
-  gap: 10px;
-  display: flex;
+}
+
+.subscribe-catalog {
   background-repeat: no-repeat;
   margin: 0;
 
@@ -451,67 +440,89 @@ h3 {
 .get-information {
   font-family: "PT sans", sans-serif;
   padding-top: 96px;
-  padding-left: 258px;
-  padding-right: 258px;
-  padding-bottom: 104px;
+  padding-bottom: 80px;
   color: #ffffff;
-  gap: 54px;
   width: 684px;
-  min-height: 215;
+  text-align: center;
+  margin: 0 auto;
 
 }
 
 .get-letters {
   font-family: "PT sans", sans-serif;
   font-size: 30px;
-  width: 404px;
-  min-height: 36px;
   font-style: normal;
   line-height: 36px;
   text-transform: uppercase;
-  gap: 20px;
   align-items: center;
+  margin-top: 0;
+  margin-bottom: 20px;
+
+}
+
+.get-letters-catalog {
+  font-family: "PT sans", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  line-height: 36px;
+  text-transform: uppercase;
+  align-items: center;
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #000000;
 
 }
 
 .useful {
-  width: 475px;
-  min-height: 53px;
+  margin-top: 0;
+  margin-bottom: 54px;
   font-weight: 400;
   line-height: 26px;
   font-size: 22px;
-  gap: 54px;
+
+}
+
+.useful-catalog {
+  margin-top: 0;
+  margin-bottom: 54px;
+  font-weight: 400;
+  line-height: 26px;
+  font-size: 22px;
+  color: #000000;
+
 }
 
 .hotels-button {
   font-family: "PT sans", sans-serif;
-  display: inline-flex;
   padding: 8px 50px;
   align-items: center;
-  gap: 10px;
   border-radius: 4px;
   background-color: #756157;
   color: #ffffff;
   text-decoration: none;
   font-size: 20px;
   font-weight: 700;
+  border: none;
 }
 
 .newsletter-form {
-  width: 412px;
-  min-height: 28px;
-  padding: 12px 20px;
-  gap: 260px;
-  align-items: center;
+  display: flex;
+  align-self: stretch;
+
+}
+
+.email {
+  width: 452px;
+  padding: 14px 20px;
+  font-family: inherit;
+  border-radius: 4px 0 0 4px;
+  background-color: #f2f2f2;
+  border: none;
 
 }
 
 .newsletter-button {
-  display: inline-flex;
   padding: 8px 50px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
   text-align: center;
   font-family: "PT sans", sans-serif;
   font-size: 20px;
@@ -522,39 +533,33 @@ h3 {
   border-radius: 0 4px 4px 0;
   background: #82B3D3;
   color: #ffffff;
+  border: none;
 }
 
 /*Футер*/
 
 .main-footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   padding: 40px 70px 30px 70px;
   align-items: center;
 
 }
 
 .footer-sosial-item {
-  display: flex;
   padding: 0 10px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-
 }
 
 .footer-sosial-list {
   display: flex;
   list-style-type: none;
-
+  margin: 0;
+  padding: 0;
+  flex-wrap: wrap;
 }
 
-.footer-general {
-  display: flex;
-  width: 1060px;
-  justify-content: space-between;
-  align-items: center;
-  flex-shrink: 0;
+.sosial-link {
+  padding: 10px;
 
 }
 
@@ -614,7 +619,7 @@ h3 {
   color: #ffffff;
   background-color: #476b86;
   min-height: 412px;
-  background-image: url("../images/photos/filter-background24.jpg");
+  background-image: url("../images/photos/background-filter.jpg");
   padding: 35px 70px 70px 70px;
 }
 
@@ -652,9 +657,53 @@ h3 {
   position: relative;
 }
 
-.breadcrumbs-hotels {
-  font-size: 16px;
+.breadcrumbs-home {
+  background-repeat: no-repeat;
+  background-position: center;
 
+}
+
+.button {
+  font-family: inherit;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 16px;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 4px;
+  text-decoration: none;
+  border: none;
+  padding: 8px 10px;
+}
+
+.button-favorite {
+  background-color: #82b3d3;
+}
+
+.button-choosen {
+  background-color: #7db54f;
+}
+
+.breadcrumbs-link {
+  font-size: 16px;
+  line-height: 21px;
+  text-decoration: none;
+  color: #ffffff;
+  margin: 0;
+  margin-right: 30px;
+}
+
+.breadcrumbs::after {
+  content: "";
+  background-image: url(../images/vector-files/bread-crumbs-indicator.svg);
+  position: absolute;
+  background-repeat: no-repeat;
+  width: 8px;
+  height: 21px;
+  top: 6px;
+  left: 23px;
 }
 
 .results-wrapper {
@@ -663,18 +712,145 @@ h3 {
 }
 
 .sort {
-  width: 1060px;
+  min-width: 1060px;
   min-height: 49px;
   display: flex;
   justify-content: space-between;
-  margin: 0;
   margin-bottom: 40px;
+}
+
+.founded {
+  padding-top: 10px;
+  margin: 0;
+  font-size: 30px;
+  text-transform: uppercase;
+  line-height: 36px;
+  font-weight: 700;
+
+}
+
+.sorting {
+  padding: 14px 20px;
+}
+
+.select-options {
+  font-family: inherit;
+  font-size: 18px;
+  color: #333333;
+  border: 2px solid #e5e5e5;
+  border-radius: 4px;
+  width: 292px;
+  padding: 14px 20px;
+  margin-right: 70px;
+  background-image: url(../images/vector-files/chek-mark-active.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
+
+}
+
+.select-options:default {
+  border: 2px solid rgba(0, 0, 0, 0.30);
+}
+
+.select-options:hover,
+.select-options:active {
+  border: 2px solid #68a2ca;
+}
+
+.select-options:disabled {
+  border: 2px solid rgba(0, 0, 0, 0.30);
+  color: #000000;
+  background-image: url("../images/vector-files/chek-mark-disable.svg");
+ opacity: 0.3;
 }
 
 .hotel-results {
   margin: 0;
   padding: 0;
   margin-bottom: 40px;
+}
+
+.dispaly-view {
+  display: flex;
+  gap: 8px;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
+
+.view-results {
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #e6e6e6;
+  border-radius: 4px;
+  width: 48px;
+  height: 48px;
+  padding: 14px 12px;
+}
+
+.display-cards {
+  background-image: url(../images/vector-files/view-cards.svg);
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #000000;
+  border-radius: 4px;
+  width: 48px;
+  height: 48px;
+  padding: 14px 12px;
+}
+
+.display-list {
+  background-image: url(../images/vector-files/view-slideshow.svg);
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #e6e6e6;
+  border-radius: 4px;
+  width: 48px;
+  height: 48px;
+  padding: 14px 12px;
+}
+
+.display-slide {
+  background-image: url(../images/vector-files/view-table.svg);
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #e6e6e6;
+  border-radius: 4px;
+  width: 48px;
+  height: 48px;
+  padding: 14px 12px;
+}
+
+.view-results {
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+  padding: 14px 12px;
+
+}
+
+.view-result:hover {
+  border-color: #83b3d3;
+  cursor: auto;
+}
+
+.view-result:active {
+  border-color: #000000;
+  cursor: auto;
+}
+
+.view-result:focus-visible {
+  outline: 2px solid #83b3d3;
+  cursor: auto;
+}
+
+.view-result:default {
+  border-color: #e5e5e5;
+  cursor: auto;
+
 }
 
 .product-list {
@@ -698,9 +874,13 @@ h3 {
 
 
 .product-card-link {
-  grid-template-columns: repeat(2, 140px);
   grid-column: 1/-1;
+  font-family: "PT sans", sans-serif;
+  font-size: 24px;
+  color: #000000;
+  text-decoration: none;
 }
+
 
 .product-card-price {
   font-size: 16px;
@@ -718,6 +898,7 @@ h3 {
   line-height: 28px;
   color: inherit;
   grid-column: 1/-1;
+  margin-top: 16px;
 
 }
 
@@ -729,27 +910,6 @@ h3 {
 .product-card-button {
   background-color: #756157;
 
-}
-
-.button {
-  color: #ffffff;
-  font-size: 16px;
-  cursor: pointer;
-  text-transform: uppercase;
-    text-align: center;
-  line-height: 20px;
-  border-radius: 4px;
-  text-decoration: none;
-  min-height: 36px;
-  border: none;
-}
-
-.button-favorite {
-  background-color: #82b3d3;
-}
-
-.button-choosen {
-  background-color: #7db54f;
 }
 
 .pagination-wrapper {
@@ -799,9 +959,10 @@ h3 {
 }
 
 .pagination-link {
+  font-family: inherit;
   box-sizing: border-box;
-  width: 60px;
-  min-height: 60px;
+  min-width: 60px;
+  height: 60px;
   display: block;
   padding: 14px 20px;
   font-size: 20px;
@@ -809,6 +970,10 @@ h3 {
   font-weight: 700;
   line-height: 36px;
   text-transform: uppercase;
+  border-radius: 4px;
+  text-decoration: none;
+  text-align: center;
+
 }
 
 .pagination-current {
@@ -817,16 +982,48 @@ h3 {
 }
 
 .pagination-item {
-  list-style-type: none
+  list-style-type: none;
+  align-items: center;
+
 }
 
 .pagination-others {
   background-color: #83b3d3;
+  color: #ffffff;
+
 }
 
 .pagination-hidden {
   background-color: #ffffff;
   color: #000000;
+}
+
+.pagination-link:hover,
+.pagination-link:focus {
+  background-color: #68a2ca;
+  border: 1px solid;
+}
+
+.pagination-link:active {
+  background-color: #82b3d3;
+  opacity: 0.3;
+}
+
+.pagination-current:hover,
+.ppagination-current:focus,
+.pagination-current:active {
+  color: #000000;
+  background-color: #f2f2f2;
+  border: none;
+  cursor: default;
+}
+
+.pagination-hidden:hover,
+.pagination-hidden:focus,
+.pagination-hidden:active {
+  color: #000000;
+  background-color: #f2f2f2;
+  border: none;
 }
 
 .subscribe-catalog {
