--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -749,6 +749,58 @@ fill: #756157;
   opacity: 0.3;
 }
 
+/*модальное окно*/
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(242, 242, 242, 0.80);
+
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 64px 70px;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 0.15);
+}
+
+.modal-auth {
+  width: 717px;
+}
+
+.modal-title {
+  color: #000000;
+font-family: inherit;
+font-size: 30px;
+font-weight: 700px;
+text-transform: uppercase;
+line-height: 36px;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  width: 52px;
+  height: 52px;
+  right: 52px;
+  top: 64px;
+  background-color: #f2f2f2;
+  border: none;
+  background-image: url("../images/vector-files/cross.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+
+
 /*Каталог*/
 
 .home:hover,
@@ -884,6 +936,7 @@ font-size: 18px;
   width: 13px;
 height: 15px;
 display: block;
+padding-bottom: 0;
 
 }
 
@@ -896,15 +949,24 @@ display: block;
   margin-right: 30px;
 }
 
-.breadcrumbs::after {
+.breadcrumbs-item {
+  position: relative;
+}
+
+.breadcrumbs-hotels {
+  margin-left: 20px;
+}
+
+.breadcrumbs-item::after {
   content: "";
   background-image: url(../images/vector-files/bread-crumbs-indicator.svg);
   position: absolute;
   background-repeat: no-repeat;
   width: 8px;
   height: 21px;
-  top: 6px;
-  left: 23px;
+  top: 5px;
+  right: -15px;
+
 }
 
 .breadcrumbs-home:hover {
@@ -920,6 +982,7 @@ display: block;
   color: #ffffff;
   opacity: 30%;
 }
+
 
 .filter-infrastructure {
   min-width: 150px;
